--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,19 @@ android {
 }
 
 dependencies {
+    def fragment_version = "1.2.4"
+    def jsoup_version = "1.13.1"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3' // Kotlin
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "org.jetbrains.anko:anko-common:0.10.8"
+    implementation "org.jsoup:jsoup:$jsoup_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
