--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3' // Kotlin
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "org.jetbrains.anko:anko-common:0.10.8"
     implementation "org.jsoup:jsoup:$jsoup_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
