--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ android {
 dependencies {
     def fragment_version = "1.2.4"
     def jsoup_version = "1.13.1"
+    def gson_version = "2.8.6"
+    def anko_common_version = "0.10.8"
+    def picasso_version = "2.71828"
+    def arch_version= '1.1.1'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -36,11 +40,15 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3' // Kotlin
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation "androidx.cardview:cardview:1.0.0"
+
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation "org.jetbrains.anko:anko-common:0.10.8"
+    implementation "com.google.code.gson:gson:$gson_version"
+    implementation "com.squareup.picasso:picasso:$picasso_version"
+    implementation "org.jetbrains.anko:anko-common:$anko_common_version"
     implementation "org.jsoup:jsoup:$jsoup_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "android.arch.lifecycle:extensions:$arch_version"
+    annotationProcessor "android.arch.lifecycle:compiler:$arch_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
