--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3' // Kotlin
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.codesgood:justifiedtextview:1.1.0'
 
     implementation 'com.google.android.material:material:1.0.0'
     implementation "com.google.code.gson:gson:$gson_version"
